# RAGenius

./: .dockerignore  .env.example  .flake8  .gitignore  ALIYUN_DEPLOY.md  ARCHITECTURE_REFACTOR.md  CI_CD_SETUP_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOY_PERSISTENCE.md  DOCUMENT_MANAGEMENT.md  NO_BEIAN_DEPLOY.md  PERSISTENCE_CONFIG.md  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  README.md  cleanup.sh  commit_ci_setup.sh  deploy_aliyun.sh  docker-compose.yml  package-lock.json  pyproject.toml  railway.json  requirements.txt  run.sh  sonar-project.properties  web_app.py
.github/: PULL_REQUEST_TEMPLATE.md  SETUP_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI_QUICK_REFERENCE.md  CI_TROUBLESHOOTING.md  DEPLOY_SETUP.md  QUICKSTART.md  README.md  WHY_SEPARATE_DOCKER_BUILDS.md  ci.yml  code-quality.yml  codeql.yml  dependency-review.yml  deploy-to-vps.yml  docker-build-test.yml  docker-publish.yml
app/: config.py
app/core/: document_processor.py  model_utils.py  retrieval_chain.py  shared_instances.py
backend/: .dockerignore  Dockerfile  app.py  config.py  container.py  prompts.py  requirements.txt
backend/config/: __init__.py  config.py  logging_config.py  prompts.py
backend/core/: document_processor.py  model_utils.py  retrieval_chain.py  shared_instances.py
backend/interfaces/: __init__.py  services.py  vector_store.py
backend/managers/: __init__.py  cache_manager.py  model_manager.py  timing.py  vector_store_manager.py
backend/routes/: info.py  (+5 more)
data/: test_rebuild.txt
evaluation/: QUICKSTART.md  README.md  TEST_CATEGORIES.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  requirements.txt  run_evaluation.sh  run_log.txt  setup_api_key.sh  test_connection.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: test_model.py
(+29 files in other folders)
